# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xy0SLA8_1HhzlD3GHjMe-1iclRq_um2MoUgP0s1627rk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1_FLauGOgg-bNuDpdAEHWRMQpxlYslXB28QMlHBlCbEA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1VDZ6l4RKtbm-7qKLkNoGrwN6e91Q5TP1WmtYse5C9TE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xjtN9LaNt-sAAIU3kbLQDtwlAiQzIeMWsAtnGWPTrvsk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1fi41_ObOGplq9aTb9Fzppp_HczbGqpWUZ5CW9Kfsx8Y=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1RX4v0EAahXUW1MqLnvK_Zjs88izK1kEHNHJBWH6STR8=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1PtD2vLCpxkIh2KYfn0r8K0BO4V1D73iAcWlFFc0Bg8w=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT260x_n8R8p7iwUVVZIe3kN_XvG0dAuo8bNe4AfEj3N4g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT27Fp00rioLXxcO9fZtAMcxn2EQy_0jmvQvgxSG_Bit-g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT27g2KUQAzgYEihNPx1WGr8byveP9772CDKPu7h7YkasM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2B7_a8HfPhbizOmC9x3JHwNwdwbbqDAaaV3-974tQ6Ks=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2MAuMAzI3nzSJKKOI5QONLg1TXYgavxXG8-Gd6maQgdQ=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1-hEutf-qP7g6JlO3MD06us9JtQolCp-O-R6Rrqxeack=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT11WMIL-JXqOCA0wM5d5zXI3CXxc0fiAfaTRBs6PEkqHM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT124PmWGcf6HFqA2vMzR0Pa4Akyf7SgJlqu-LTQF5-YuA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1F3zLubBMWVP9JCa6Q4u-QfDpEURTDyUtN8liSJODN7s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1VkNBWvBE5LdTXbKNE5LDH0E4x7lyJ4jGj8PrGzftL5U=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1_6CH8cxlG5dQCEtwKX7KK9w8SCIn_KuBYF_Etua2ybs=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x19ljLeli2IMy4_hrH7WA2I_gXy4tn5gf05WogY8-vdHg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x642WjVcS7sErfao-V7tqgAU99t5LJDBOxpFx5f5YiJR6Q=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64Yh5LBQdYyx_P733udywIUGfMAEaeV4PSz5nfd_VSJF4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x16BexnnrOljxyhvkgmrsFSNA15qVFH4GBTcyCmSkLQRc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1Dv8_ElhUL9TZ-qvVS_2VzF-SmpAr1G3RuXi_3PdHfAM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1GjuAWTvodhvCrrEuscLB8rihHwwCBJ2dJBBQWhSQuDs=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT25gjUyolcA4qWzq2_tmYi2GsItphaX4qkpHfod5TbrvQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT26G6jjmiOnk49G6JUzCJ5i29NTVD6qtanROwtlrkAD0s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3Yv9TvYdJmARU2BwCHcjCZMkMIt4apKrXRuvn3eMEwOk=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32M7Z-BsXq2Cn7dzmvK8uf4VrHE2Pk5ZegSFC1Qb4VedY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32MbhGpTnaFMXVJFjZ8Zc5aq1b2dFfV3UeVRl9ZyGOAps=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32gYBpI4wu_7yZVuLojK4BSgK_JBJIUbbiBC-aQPvl_w0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI32I9F0bDZ77bNEXvyhN_2LxkqnTD4v6A520xbJBUmvftQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xTC3vP4gjpCtI1Gvn-bCL063BKCYg8kOStBqELPrWHDM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xUl24ZKm5_cSuTsUQP_U0lrNPFhpWfikywqp6RZoJO1k=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT11F72ETAuufdxe0EKtISyH0GZDbAZKSjZ41ynJnYspRs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT164F4avWFAZGS4tIZcWfFweoioQFifIlH4iBvfD0oOfQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1BdlJX4p-9EWG1VixXS-vMNRmOpq-pC8kzdVfwYlTo94=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1FJJFcDLRlT15AowAt-Me55igHPEF2nogkgqJnQHTqz0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1JIqCRzG1oVvAmggPnOCzv4_jbSCm8bAPPGR5v4ywuYs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1JKA-7r8jq_Zlpmr0h8FzceF5im-t2SKlZPkNA02Xf_0=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT18QsumoEupQ7_iA0CHeSiJel_-JoxdfOw_7_FJIjWCvY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1J1GeRRQZgcTOl3lXytevxQDx2aUsvf2htNt6Lu72nHc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT31pa0ABFfB8sCoraOM1RLpleByo0pDxRJEWS6igE3tL8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3OXARwUTuiLTQW7bjCVmC32zKN2nnX13beZ4_xw0skTo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT47jMWZEXdJnt4R0AsW_NP59iYUOUG6Gxl3ynty_Npf30=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4FOIOtG0zrUDL2ZNFTdSfYrqsVNQ-kQDIkBv6GBph-l0=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16lFGIRXGSOsZ5_SUICCSJf8oLiw05QTDYYo4L8Tg9Was=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16x0WZNRGPvSymC3p2KWPqBssfgdgAaWVsmRAiWf0R_yE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16UTjG4Tc47qG0Pu4JPqqI2qtEOeUepKFlUABH-iQzLZ0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16KBlh0CXOv0tiq9I-V_4EIWz0lsJA9wTU2IS2kYEAhRA=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16EYrXx4jztiHd_yPjGzQMOZF5gXnNgBR41jzpFY8ppWE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16osX8YZyZ6x-tv13XnZUhpGYYKdZS39L_dVuEuvnx7ok=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16UWaDfRJvN2HYlXMxHJ3OtAI4ftM5fVgcWkcyn6sTBR4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16x3upwmoXbY57wbQwNcKa4O3yd7lSQSLwvxVT3OM-qTM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16w3mjHBJkB6DgWXkD8xTDbD8wuHRBpX3Afh-aqfDgUlU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16dxTI4-Beby5JIX8UkK_QpnRisHPKL3Foqw9N2HhRHYw=',
      'err': 0,
    }),
  ])
# ---
